Mise a jour automatique

--- a/Cpp/Makefile
+++ b/Cpp/Makefile
@@ -48,16 +48,20 @@ OBJECTS_DIR   = ./
 
 ####### Files
 
-SOURCES       = functions.cpp \
+SOURCES       = CheckBox.cpp \
+		functions.cpp \
 		main.cpp \
 		MainWindow.cpp \
 		MainWindow_Admin.cpp \
+		MainWindow_Changes.cpp \
 		MainWindow_Connect.cpp \
 		MainWindow_ConnectDialog.cpp \
+		PushButton.cpp \
 		Widgets/DrawScene.cpp \
 		Widgets/GraphScene.cpp \
 		Widgets/QtFunctions.cpp \
 		Widgets/Scene.cpp \
+		Widgets/Window.cpp \
 		Widgets/C++/Animal.cpp \
 		Widgets/C++/Ant.cpp \
 		Widgets/C++/Args.cpp \
@@ -84,20 +88,28 @@ SOURCES       = functions.cpp \
 		Widgets/C++/time.cpp \
 		Widgets/C++/Timer.cpp \
 		Widgets/C++/types.cpp \
-		Widgets/C++/Vegetal.cpp moc_MainWindow.cpp \
+		Widgets/C++/Vegetal.cpp moc_CheckBox.cpp \
+		moc_MainWindow.cpp \
+		moc_PushButton.cpp \
+		moc_TitleLabel.cpp \
 		moc_DrawScene.cpp \
 		moc_GraphScene.cpp \
-		moc_Scene.cpp
-OBJECTS       = functions.o \
+		moc_Scene.cpp \
+		moc_Window.cpp
+OBJECTS       = CheckBox.o \
+		functions.o \
 		main.o \
 		MainWindow.o \
 		MainWindow_Admin.o \
+		MainWindow_Changes.o \
 		MainWindow_Connect.o \
 		MainWindow_ConnectDialog.o \
+		PushButton.o \
 		DrawScene.o \
 		GraphScene.o \
 		QtFunctions.o \
 		Scene.o \
+		Window.o \
 		Animal.o \
 		Ant.o \
 		Args.o \
@@ -125,10 +137,14 @@ OBJECTS       = functions.o \
 		Timer.o \
 		types.o \
 		Vegetal.o \
+		moc_CheckBox.o \
 		moc_MainWindow.o \
+		moc_PushButton.o \
+		moc_TitleLabel.o \
 		moc_DrawScene.o \
 		moc_GraphScene.o \
-		moc_Scene.o
+		moc_Scene.o \
+		moc_Window.o
 DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/linux.conf \
@@ -185,14 +201,19 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exceptions.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
-		Cpp.pro functions.hpp \
+		Cpp.pro CheckBox.hpp \
+		functions.hpp \
 		MainWindow.h \
+		PushButton.hpp \
+		TitleLabel.hpp \
 		Widgets/DrawScene.hpp \
 		Widgets/GraphScene.hpp \
+		Widgets/Qt.hpp \
 		Widgets/QtDefines.hpp \
 		Widgets/QtFunctions.hpp \
 		Widgets/Scene.hpp \
 		Widgets/Spacers.hpp \
+		Widgets/Window.hpp \
 		Widgets/C++/Animal.hpp \
 		Widgets/C++/Ant.hpp \
 		Widgets/C++/Args.hpp \
@@ -224,16 +245,20 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		Widgets/C++/time.hpp \
 		Widgets/C++/tree.hpp \
 		Widgets/C++/types.hpp \
-		Widgets/C++/Vegetal.hpp functions.cpp \
+		Widgets/C++/Vegetal.hpp CheckBox.cpp \
+		functions.cpp \
 		main.cpp \
 		MainWindow.cpp \
 		MainWindow_Admin.cpp \
+		MainWindow_Changes.cpp \
 		MainWindow_Connect.cpp \
 		MainWindow_ConnectDialog.cpp \
+		PushButton.cpp \
 		Widgets/DrawScene.cpp \
 		Widgets/GraphScene.cpp \
 		Widgets/QtFunctions.cpp \
 		Widgets/Scene.cpp \
+		Widgets/Window.cpp \
 		Widgets/C++/Animal.cpp \
 		Widgets/C++/Ant.cpp \
 		Widgets/C++/Args.cpp \
@@ -426,8 +451,8 @@ dist: distdir FORCE
 distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
-	$(COPY_FILE) --parents functions.hpp MainWindow.h Widgets/DrawScene.hpp Widgets/GraphScene.hpp Widgets/QtDefines.hpp Widgets/QtFunctions.hpp Widgets/Scene.hpp Widgets/Spacers.hpp Widgets/C++/Animal.hpp Widgets/C++/Ant.hpp Widgets/C++/Args.hpp Widgets/C++/array.hpp Widgets/C++/bdd.hpp Widgets/C++/C++.hpp Widgets/C++/collides.hpp Widgets/C++/console.hpp Widgets/C++/Contraption.hpp Widgets/C++/convert.hpp Widgets/C++/cryptage.hpp Widgets/C++/defines.hpp Widgets/C++/Entities.hpp Widgets/C++/Entity.hpp Widgets/C++/errors.hpp Widgets/C++/files.hpp Widgets/C++/Hostile.hpp Widgets/C++/macro.hpp Widgets/C++/Map.hpp Widgets/C++/maths.hpp Widgets/C++/Mushroom.hpp Widgets/C++/Object.hpp Widgets/C++/Plant.hpp Widgets/C++/Player.hpp Widgets/C++/pointers.hpp Widgets/C++/RNG.hpp Widgets/C++/sorting.hpp Widgets/C++/string.hpp Widgets/C++/time.hpp Widgets/C++/tree.hpp Widgets/C++/types.hpp Widgets/C++/Vegetal.hpp $(DISTDIR)/
-	$(COPY_FILE) --parents functions.cpp main.cpp MainWindow.cpp MainWindow_Admin.cpp MainWindow_Connect.cpp MainWindow_ConnectDialog.cpp Widgets/DrawScene.cpp Widgets/GraphScene.cpp Widgets/QtFunctions.cpp Widgets/Scene.cpp Widgets/C++/Animal.cpp Widgets/C++/Ant.cpp Widgets/C++/Args.cpp Widgets/C++/array.cpp Widgets/C++/bdd.cpp Widgets/C++/Clock.cpp Widgets/C++/collides.cpp Widgets/C++/console.cpp Widgets/C++/Contraption.cpp Widgets/C++/convert.cpp Widgets/C++/cryptage.cpp Widgets/C++/defines.cpp Widgets/C++/Entity.cpp Widgets/C++/errors.cpp Widgets/C++/files.cpp Widgets/C++/Hostile.cpp Widgets/C++/Map.cpp Widgets/C++/maths.cpp Widgets/C++/Mushroom.cpp Widgets/C++/Object.cpp Widgets/C++/Plant.cpp Widgets/C++/Player.cpp Widgets/C++/string.cpp Widgets/C++/time.cpp Widgets/C++/Timer.cpp Widgets/C++/types.cpp Widgets/C++/Vegetal.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents CheckBox.hpp functions.hpp MainWindow.h PushButton.hpp TitleLabel.hpp Widgets/DrawScene.hpp Widgets/GraphScene.hpp Widgets/Qt.hpp Widgets/QtDefines.hpp Widgets/QtFunctions.hpp Widgets/Scene.hpp Widgets/Spacers.hpp Widgets/Window.hpp Widgets/C++/Animal.hpp Widgets/C++/Ant.hpp Widgets/C++/Args.hpp Widgets/C++/array.hpp Widgets/C++/bdd.hpp Widgets/C++/C++.hpp Widgets/C++/collides.hpp Widgets/C++/console.hpp Widgets/C++/Contraption.hpp Widgets/C++/convert.hpp Widgets/C++/cryptage.hpp Widgets/C++/defines.hpp Widgets/C++/Entities.hpp Widgets/C++/Entity.hpp Widgets/C++/errors.hpp Widgets/C++/files.hpp Widgets/C++/Hostile.hpp Widgets/C++/macro.hpp Widgets/C++/Map.hpp Widgets/C++/maths.hpp Widgets/C++/Mushroom.hpp Widgets/C++/Object.hpp Widgets/C++/Plant.hpp Widgets/C++/Player.hpp Widgets/C++/pointers.hpp Widgets/C++/RNG.hpp Widgets/C++/sorting.hpp Widgets/C++/string.hpp Widgets/C++/time.hpp Widgets/C++/tree.hpp Widgets/C++/types.hpp Widgets/C++/Vegetal.hpp $(DISTDIR)/
+	$(COPY_FILE) --parents CheckBox.cpp functions.cpp main.cpp MainWindow.cpp MainWindow_Admin.cpp MainWindow_Changes.cpp MainWindow_Connect.cpp MainWindow_ConnectDialog.cpp PushButton.cpp Widgets/DrawScene.cpp Widgets/GraphScene.cpp Widgets/QtFunctions.cpp Widgets/Scene.cpp Widgets/Window.cpp Widgets/C++/Animal.cpp Widgets/C++/Ant.cpp Widgets/C++/Args.cpp Widgets/C++/array.cpp Widgets/C++/bdd.cpp Widgets/C++/Clock.cpp Widgets/C++/collides.cpp Widgets/C++/console.cpp Widgets/C++/Contraption.cpp Widgets/C++/convert.cpp Widgets/C++/cryptage.cpp Widgets/C++/defines.cpp Widgets/C++/Entity.cpp Widgets/C++/errors.cpp Widgets/C++/files.cpp Widgets/C++/Hostile.cpp Widgets/C++/Map.cpp Widgets/C++/maths.cpp Widgets/C++/Mushroom.cpp Widgets/C++/Object.cpp Widgets/C++/Plant.cpp Widgets/C++/Player.cpp Widgets/C++/string.cpp Widgets/C++/time.cpp Widgets/C++/Timer.cpp Widgets/C++/types.cpp Widgets/C++/Vegetal.cpp $(DISTDIR)/
 
 
 clean: compiler_clean 
@@ -450,9 +475,12 @@ check: first
 
 compiler_rcc_make_all:
 compiler_rcc_clean:
-compiler_moc_header_make_all: moc_MainWindow.cpp moc_DrawScene.cpp moc_GraphScene.cpp moc_Scene.cpp
+compiler_moc_header_make_all: moc_CheckBox.cpp moc_MainWindow.cpp moc_PushButton.cpp moc_TitleLabel.cpp moc_DrawScene.cpp moc_GraphScene.cpp moc_Scene.cpp moc_Window.cpp
 compiler_moc_header_clean:
-	-$(DEL_FILE) moc_MainWindow.cpp moc_DrawScene.cpp moc_GraphScene.cpp moc_Scene.cpp
+	-$(DEL_FILE) moc_CheckBox.cpp moc_MainWindow.cpp moc_PushButton.cpp moc_TitleLabel.cpp moc_DrawScene.cpp moc_GraphScene.cpp moc_Scene.cpp moc_Window.cpp
+moc_CheckBox.cpp: CheckBox.hpp
+	/usr/lib/x86_64-linux-gnu/qt5/bin/moc $(DEFINES) -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++-64 -I/home/mathias/Bureau/ISEN/Projet_CIR2/Cpp -I/home/mathias/Bureau/ISEN/Projet_CIR2/Cpp -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/5 -I/usr/include/x86_64-linux-gnu/c++/5 -I/usr/include/c++/5/backward -I/usr/lib/gcc/x86_64-linux-gnu/5/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/5/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include CheckBox.hpp -o moc_CheckBox.cpp
+
 moc_MainWindow.cpp: functions.hpp \
 		Widgets/C++/C++.hpp \
 		Widgets/C++/Entities.hpp \
@@ -492,8 +520,17 @@ moc_MainWindow.cpp: functions.hpp \
 		Widgets/GraphScene.hpp \
 		Widgets/Spacers.hpp \
 		Widgets/QtFunctions.hpp \
+		CheckBox.hpp \
+		PushButton.hpp \
+		TitleLabel.hpp \
 		MainWindow.h
 	/usr/lib/x86_64-linux-gnu/qt5/bin/moc $(DEFINES) -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++-64 -I/home/mathias/Bureau/ISEN/Projet_CIR2/Cpp -I/home/mathias/Bureau/ISEN/Projet_CIR2/Cpp -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/5 -I/usr/include/x86_64-linux-gnu/c++/5 -I/usr/include/c++/5/backward -I/usr/lib/gcc/x86_64-linux-gnu/5/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/5/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include MainWindow.h -o moc_MainWindow.cpp
+
+moc_PushButton.cpp: PushButton.hpp
+	/usr/lib/x86_64-linux-gnu/qt5/bin/moc $(DEFINES) -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++-64 -I/home/mathias/Bureau/ISEN/Projet_CIR2/Cpp -I/home/mathias/Bureau/ISEN/Projet_CIR2/Cpp -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/5 -I/usr/include/x86_64-linux-gnu/c++/5 -I/usr/include/c++/5/backward -I/usr/lib/gcc/x86_64-linux-gnu/5/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/5/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include PushButton.hpp -o moc_PushButton.cpp
+
+moc_TitleLabel.cpp: TitleLabel.hpp
+	/usr/lib/x86_64-linux-gnu/qt5/bin/moc $(DEFINES) -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++-64 -I/home/mathias/Bureau/ISEN/Projet_CIR2/Cpp -I/home/mathias/Bureau/ISEN/Projet_CIR2/Cpp -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/5 -I/usr/include/x86_64-linux-gnu/c++/5 -I/usr/include/c++/5/backward -I/usr/lib/gcc/x86_64-linux-gnu/5/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/5/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include TitleLabel.hpp -o moc_TitleLabel.cpp
 
 moc_DrawScene.cpp: Widgets/Scene.hpp \
 		Widgets/DrawScene.hpp
@@ -505,6 +542,9 @@ moc_GraphScene.cpp: Widgets/Scene.hpp \
 
 moc_Scene.cpp: Widgets/Scene.hpp
 	/usr/lib/x86_64-linux-gnu/qt5/bin/moc $(DEFINES) -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++-64 -I/home/mathias/Bureau/ISEN/Projet_CIR2/Cpp -I/home/mathias/Bureau/ISEN/Projet_CIR2/Cpp -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/5 -I/usr/include/x86_64-linux-gnu/c++/5 -I/usr/include/c++/5/backward -I/usr/lib/gcc/x86_64-linux-gnu/5/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/5/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include Widgets/Scene.hpp -o moc_Scene.cpp
+
+moc_Window.cpp: Widgets/Window.hpp
+	/usr/lib/x86_64-linux-gnu/qt5/bin/moc $(DEFINES) -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++-64 -I/home/mathias/Bureau/ISEN/Projet_CIR2/Cpp -I/home/mathias/Bureau/ISEN/Projet_CIR2/Cpp -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I/usr/include/c++/5 -I/usr/include/x86_64-linux-gnu/c++/5 -I/usr/include/c++/5/backward -I/usr/lib/gcc/x86_64-linux-gnu/5/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/5/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include Widgets/Window.hpp -o moc_Window.cpp
 
 compiler_moc_source_make_all:
 compiler_moc_source_clean:
@@ -519,6 +559,9 @@ compiler_lex_clean:
 compiler_clean: compiler_moc_header_clean 
 
 ####### Compile
+
+CheckBox.o: CheckBox.cpp CheckBox.hpp
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o CheckBox.o CheckBox.cpp
 
 functions.o: functions.cpp functions.hpp \
 		Widgets/C++/C++.hpp \
@@ -594,7 +637,10 @@ main.o: main.cpp MainWindow.h \
 		Widgets/Scene.hpp \
 		Widgets/GraphScene.hpp \
 		Widgets/Spacers.hpp \
-		Widgets/QtFunctions.hpp
+		Widgets/QtFunctions.hpp \
+		CheckBox.hpp \
+		PushButton.hpp \
+		TitleLabel.hpp
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o main.cpp
 
 MainWindow.o: MainWindow.cpp MainWindow.h \
@@ -636,7 +682,10 @@ MainWindow.o: MainWindow.cpp MainWindow.h \
 		Widgets/Scene.hpp \
 		Widgets/GraphScene.hpp \
 		Widgets/Spacers.hpp \
-		Widgets/QtFunctions.hpp
+		Widgets/QtFunctions.hpp \
+		CheckBox.hpp \
+		PushButton.hpp \
+		TitleLabel.hpp
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o MainWindow.o MainWindow.cpp
 
 MainWindow_Admin.o: MainWindow_Admin.cpp MainWindow.h \
@@ -678,8 +727,56 @@ MainWindow_Admin.o: MainWindow_Admin.cpp MainWindow.h \
 		Widgets/Scene.hpp \
 		Widgets/GraphScene.hpp \
 		Widgets/Spacers.hpp \
-		Widgets/QtFunctions.hpp
+		Widgets/QtFunctions.hpp \
+		CheckBox.hpp \
+		PushButton.hpp \
+		TitleLabel.hpp
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o MainWindow_Admin.o MainWindow_Admin.cpp
+
+MainWindow_Changes.o: MainWindow_Changes.cpp MainWindow.h \
+		functions.hpp \
+		Widgets/C++/C++.hpp \
+		Widgets/C++/Entities.hpp \
+		Widgets/C++/Contraption.hpp \
+		Widgets/C++/defines.hpp \
+		Widgets/C++/bdd.hpp \
+		Widgets/C++/types.hpp \
+		Widgets/C++/errors.hpp \
+		Widgets/C++/console.hpp \
+		Widgets/C++/convert.hpp \
+		Widgets/C++/files.hpp \
+		Widgets/C++/time.hpp \
+		Widgets/C++/pointers.hpp \
+		Widgets/C++/string.hpp \
+		Widgets/C++/macro.hpp \
+		Widgets/C++/array.hpp \
+		Widgets/C++/Args.hpp \
+		Widgets/C++/RNG.hpp \
+		Widgets/C++/maths.hpp \
+		Widgets/C++/collides.hpp \
+		Widgets/C++/Map.hpp \
+		Widgets/C++/Object.hpp \
+		Widgets/C++/Entity.hpp \
+		Widgets/C++/Animal.hpp \
+		Widgets/C++/Hostile.hpp \
+		Widgets/C++/Ant.hpp \
+		Widgets/C++/Vegetal.hpp \
+		Widgets/C++/Plant.hpp \
+		Widgets/C++/Mushroom.hpp \
+		Widgets/C++/Player.hpp \
+		Widgets/C++/cryptage.hpp \
+		Widgets/C++/sorting.hpp \
+		Widgets/C++/tree.hpp \
+		Widgets/QtDefines.hpp \
+		Widgets/DrawScene.hpp \
+		Widgets/Scene.hpp \
+		Widgets/GraphScene.hpp \
+		Widgets/Spacers.hpp \
+		Widgets/QtFunctions.hpp \
+		CheckBox.hpp \
+		PushButton.hpp \
+		TitleLabel.hpp
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o MainWindow_Changes.o MainWindow_Changes.cpp
 
 MainWindow_Connect.o: MainWindow_Connect.cpp MainWindow.h \
 		functions.hpp \
@@ -720,7 +817,10 @@ MainWindow_Connect.o: MainWindow_Connect.cpp MainWindow.h \
 		Widgets/Scene.hpp \
 		Widgets/GraphScene.hpp \
 		Widgets/Spacers.hpp \
-		Widgets/QtFunctions.hpp
+		Widgets/QtFunctions.hpp \
+		CheckBox.hpp \
+		PushButton.hpp \
+		TitleLabel.hpp
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o MainWindow_Connect.o MainWindow_Connect.cpp
 
 MainWindow_ConnectDialog.o: MainWindow_ConnectDialog.cpp MainWindow.h \
@@ -762,8 +862,14 @@ MainWindow_ConnectDialog.o: MainWindow_ConnectDialog.cpp MainWindow.h \
 		Widgets/Scene.hpp \
 		Widgets/GraphScene.hpp \
 		Widgets/Spacers.hpp \
-		Widgets/QtFunctions.hpp
+		Widgets/QtFunctions.hpp \
+		CheckBox.hpp \
+		PushButton.hpp \
+		TitleLabel.hpp
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o MainWindow_ConnectDialog.o MainWindow_ConnectDialog.cpp
+
+PushButton.o: PushButton.cpp PushButton.hpp
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o PushButton.o PushButton.cpp
 
 DrawScene.o: Widgets/DrawScene.cpp Widgets/DrawScene.hpp \
 		Widgets/Scene.hpp
@@ -793,6 +899,9 @@ QtFunctions.o: Widgets/QtFunctions.cpp Widgets/QtFunctions.hpp \
 
 Scene.o: Widgets/Scene.cpp Widgets/Scene.hpp
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Scene.o Widgets/Scene.cpp
+
+Window.o: Widgets/Window.cpp Widgets/Window.hpp
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Window.o Widgets/Window.cpp
 
 Animal.o: Widgets/C++/Animal.cpp Widgets/C++/Animal.hpp \
 		Widgets/C++/Entity.hpp \
@@ -1137,8 +1246,17 @@ Vegetal.o: Widgets/C++/Vegetal.cpp Widgets/C++/Vegetal.hpp \
 		Widgets/C++/Map.hpp
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Vegetal.o Widgets/C++/Vegetal.cpp
 
+moc_CheckBox.o: moc_CheckBox.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_CheckBox.o moc_CheckBox.cpp
+
 moc_MainWindow.o: moc_MainWindow.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_MainWindow.o moc_MainWindow.cpp
+
+moc_PushButton.o: moc_PushButton.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_PushButton.o moc_PushButton.cpp
+
+moc_TitleLabel.o: moc_TitleLabel.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_TitleLabel.o moc_TitleLabel.cpp
 
 moc_DrawScene.o: moc_DrawScene.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_DrawScene.o moc_DrawScene.cpp
@@ -1148,6 +1266,9 @@ moc_GraphScene.o: moc_GraphScene.cpp
 
 moc_Scene.o: moc_Scene.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_Scene.o moc_Scene.cpp
+
+moc_Window.o: moc_Window.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_Window.o moc_Window.cpp
 
 ####### Install
 
